# clinical-ai-assistant

./: .env.example  .gitignore  LICENSE  README.md  main.py  makefile  pyproject.toml
data/chroma/4fab84a0-5e2f-48ec-a821-e23d654c7bfb/: index_metadata.pickle
data/processed/: legacy_patients.csv  web_medicines.csv
data/raw/: legacy_clinic.db
docs/diagrams/: class_diagram.puml  sequence_diagram.puml
src/: config.py
src/agent/: agent.py  schemas.py  tools.py
src/extraction/: base.py  legacy_loader.py  web_scraper.py
src/rag/: chunker.py  embedder.py  pipeline.py  retriever.py
src/ui/: app.py
